fixed footer issue on small screens

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -268,7 +268,8 @@
     font-family: Quicksand-Bold;
     font-style: normal;
     font-weight: bold;
-    font-size: 2rem;
+    /* font-size: 2rem; */
+    font-size: clamp(0.8rem, calc(5vw + 0.7rem), 2rem);
     line-height: 37px;
     text-align: center;
     color: #000000;
@@ -455,7 +456,7 @@ footer {
 }
 
 .footerIcons {
-    width: 10%;
+    width: 120px;
     justify-content: space-between;
     display: flex;
     padding-top: 20px;
@@ -475,7 +476,7 @@ footer {
 }
 
 .footerLogo {
-    width: 8%;
+    width: 100px;
     text-align: center;
 }
 
@@ -513,36 +514,11 @@ footer {
     .keyFeatureLogo {
         display: none;
     }
-    .footerLogo {
-        width: 10%;
-    }
 }
 
 @media (max-width: 940px) {
     header {
         /* display: block; */
         padding: 0 10px;
-    }
-
-    .footerLogo,
-    .footerIcons {
-        width: 12%;
-        text-align: center;
-    }
-}
-
-@media (max-width: 730px) {
-    .footerLogo,
-    .footerIcons {
-        width: 18%;
-        text-align: center;
-    }
-}
-
-@media (max-width: 450px) {
-    .footerLogo,
-    .footerIcons {
-        width: 25%;
-        text-align: center;
     }
 }
